--- a/package.json
+++ b/package.json
@@ -2,16 +2,19 @@
   "name": "channelmanager",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/source.ts",
+  "main": "build/source.js",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/source.js",
-    "paths": "resolve-tspaths"
+    "dev": "ts-node-dev -r tsconfig-paths/register --respawn src/source.ts",
+    "start": "node build/source.js",
+    "paths": "resolve-tspaths",
+    "watch": "tsc-watch --onSuccess \"resolve-tspaths\""
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "cli-table3": "^0.6.5",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
@@ -19,8 +22,13 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@types/node": "^22.9.0",
     "eslint": "^9.14.0",
     "globals": "^15.12.0",
+    "ts-node-dev": "^2.0.0",
+    "tsc-watch": "^6.2.0",
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.6.3",
     "typescript-eslint": "^8.13.0"
   }
 }
