--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "resolve-tspaths": "^0.8.22"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
