--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,15 +37,24 @@ jobs:
           source: './node_modules'
           target: '/home/noxic/projects/bots/channel_manager/node_modules_temp'
 
-      - name: Transfer other project files to VPS temporary folder
+      - name: Transfer other project files to VPS temporary folder (excluding src folder)
         uses: appleboy/scp-action@master
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USER }}
           password: ${{ secrets.VPS_PASSWORD }}
-          source: '.'
+          source: '.' # Transfers all files
           target: '/home/noxic/projects/bots/channel_manager/temp_project'
-          rm -rf './src'
+
+      - name: Remove src folder from temp_project on VPS
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USER }}
+          password: ${{ secrets.VPS_PASSWORD }}
+          script: |
+            cd /home/noxic/projects/bots/channel_manager/temp_project
+            rm -rf src
 
       - name: Deploy new build, node_modules, and other files on VPS
         uses: appleboy/ssh-action@master
@@ -55,7 +64,7 @@ jobs:
           password: ${{ secrets.VPS_PASSWORD }}
           script: |
             cd /home/noxic/projects/bots/channel_manager
-            
+
             # Ensure the backup directories exist as directories
             rm -rf build_backup
             mkdir -p build_backup
@@ -77,8 +86,8 @@ jobs:
             mv build_temp build
             mv node_modules_temp node_modules
 
-            # Copy other updated files from temp_project, excluding 'src' folder
-            rsync -a --exclude 'src' temp_project/ ./
+            # Copy other updated files from temp_project, excluding 'src' (already removed)
+            rsync -a temp_project/ ./
 
             # Clean up the temp directory
             rm -rf temp_project
