--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/pg": "^8.11.10",
     "cli-table3": "^0.6.5",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
+    "pg": "^8.13.1",
     "resolve-tspaths": "^0.8.22"
   },
   "devDependencies": {
