--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,6 +9,8 @@ jobs:
   build-and-deploy:
     runs-on: ubuntu-latest
 
+    if: ${{ !contains(github.event.head_commit.message, '[deploy ignore]') }}
+
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
