--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@top-gg/sdk": "^3.1.6",
     "@types/pg": "^8.11.10",
     "cli-table3": "^0.6.5",
     "discord.js": "^14.16.3",
@@ -21,12 +22,19 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "pg": "^8.13.1",
-    "resolve-tspaths": "^0.8.22"
+    "resolve-tspaths": "^0.8.22",
+    "topgg-autoposter": "^2.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
+    "@stylistic/eslint-plugin": "^2.10.1",
+    "@stylistic/eslint-plugin-ts": "^2.10.1",
     "@types/node": "^22.9.0",
+    "@typescript-eslint/eslint-plugin": "^8.14.0",
+    "@typescript-eslint/parser": "^8.14.0",
     "eslint": "^9.14.0",
+    "eslint-plugin-promise": "^7.1.0",
+    "eslint-plugin-unicorn": "^56.0.0",
     "globals": "^15.12.0",
     "ts-node-dev": "^2.0.0",
     "tsc-watch": "^6.2.0",
