--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "cli-table3": "^0.6.5",
     "discord.js": "^14.16.3",
     "dotenv": "^16.4.5",
+    "express": "^4.21.1",
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "pg": "^8.13.1",
@@ -28,6 +29,7 @@
     "@eslint/js": "^9.14.0",
     "@stylistic/eslint-plugin": "^2.10.1",
     "@stylistic/eslint-plugin-ts": "^2.10.1",
+    "@types/express": "^5.0.0",
     "@types/node": "^22.9.0",
     "@typescript-eslint/eslint-plugin": "^8.14.0",
     "@typescript-eslint/parser": "^8.14.0",
