feat: Added a interaction handler, handling buttons and dropdowns and so on like if they were commands, also changed alot of code and commands,

--- a/.env.default
+++ b/.env.default
@@ -1,4 +1,4 @@
-TOKEN=...
-DATABASE_STRING=...
-TOPPGG_TOKEN=...
-NODE_ENV=...
+TOKEN=MTM...
+DATABASE_STRING=postgresql://user:password@host:port/database_name
+TOPPGG_TOKEN=eyJh...
+NODE_ENV=dev
