--- a/.env.default
+++ b/.env.default
@@ -1,4 +1,4 @@
-TOKEN=MTM...
-DATABASE_STRING=postgresql://user:password@host:port/database_name
-TOPPGG_TOKEN=eyJh...
-NODE_ENV=dev
+TOKEN=...
+DATABASE_STRING=...
+TOPPGG_TOKEN=...
+NODE_ENV=...
