--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,8 +14,7 @@
       "@/commands/*": ["./commands/*"],
       "@/events/*": ["./events/*"],
       "@/types/*": ["./@types/*"],
-      "@config": ["../config.json"],
-      "@/enums/*": ["./utils/enums/*"]
+      "@config": ["../config.json"]
     }
   },
   "include": ["src/**/*", "src/@types/**/*"]
