--- a/package.json
+++ b/package.json
@@ -22,25 +22,17 @@
     "fs": "^0.0.1-security",
     "path": "^0.12.7",
     "pg": "^8.13.1",
+    "redis": "^4.7.0",
     "resolve-tspaths": "^0.8.22",
     "topgg-autoposter": "^2.0.2"
   },
   "devDependencies": {
-    "@eslint/js": "^9.14.0",
-    "@stylistic/eslint-plugin": "^2.10.1",
-    "@stylistic/eslint-plugin-ts": "^2.10.1",
     "@types/express": "^5.0.0",
-    "@types/node": "^22.9.0",
-    "@typescript-eslint/eslint-plugin": "^8.14.0",
-    "@typescript-eslint/parser": "^8.14.0",
-    "eslint": "^9.14.0",
-    "eslint-plugin-promise": "^7.1.0",
-    "eslint-plugin-unicorn": "^56.0.0",
+    "@types/node": "^22.9.3",
     "globals": "^15.12.0",
     "ts-node-dev": "^2.0.0",
     "tsc-watch": "^6.2.0",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.6.3",
-    "typescript-eslint": "^8.13.0"
+    "typescript": "^5.7.0"
   }
 }
