--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,8 @@
-version: "3.8"
-
 services:
   app:
     build: .
     container_name: "cm-bot"
     volumes:
       - ./build:/build
-    restart: always
+    restart: unless-stopped
     network_mode: "host"
